src/objects/Xero_Saved_URL__c.object
<CustomObject>
    <fields>
        <fullName>Body__c</fullName>
        <label>Body</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_Form_URL_Encoded__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Form URL Encoded</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Method__c</fullName>
        <label>Method</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>URL__c</fullName>
        <externalId>true</externalId>
        <label>URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Xero_Service__c</fullName>
        <label>Xero Service</label>
        <referenceTo>Xero_Service__c</referenceTo>
        <relationshipLabel>Xero Saved URLs</relationshipLabel>
        <relationshipName>Xero_Saved_URLs</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Xero Saved URL</label>
    <nameField>
        <label>Xero Saved URL Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Xero Saved URLs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>